<resources>
    <string name="app_name">Calculator</string>
    <string name="tvExpression">0</string>
    <string name="tvResult">0</string>
    <string name="btnClear">Clear</string>
    <string name="btnBack">`arrowback`</string>
    <string name="btnDelete">Del</string>
    <string name="btnDivide">Div</string>
    <string name="btnMultiply">Mul</string>
    <string name="btnMinus">Min</string>
    <string name="btnPlus">Plus</string>
    <string name="btnEqual">=</string>
    <string name="btnDot">.</string>
    <string name="btn00">00</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
</resources>